Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29942

<name>~XXXX.TMP files are created and not deleted when saving files on FAT32

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • Qt Creator 12.0.0-rc1, Qt Creator 14.0.2
    • All Other Issues
    • None
    • Windows
    • 8a249c93e (master)

    Description

      Saving files creates <name>~XXXXX.TMP files next to the saved file that are in some system configurations not deleted. (Closing Qt Creator deletes the files.)

      Debugging results:

      SaveFile creates a temporary file (not the files that this bug report is about), and then uses the Windows API "ReplaceFile" to move the temporary file to the actual file, to achieve atomic write. The "ReplaceFile" API itself creates the offending temporary file, and on some system configurations they do not get deleted.

      Attachments

        1. 123.png
          123.png
          65 kB
        2. 123-1.png
          123-1.png
          65 kB
        3. exfat.CSV
          81 kB
        4. ntfs.CSV
          72 kB
        5. ProcessMonitorScreenshot.png
          ProcessMonitorScreenshot.png
          86 kB

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-29942
          # Subject Branch Project Status CR V

          Activity

            People

              davschul David Schulz
              con Eike Ziller
              Votes:
              5 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes