Utils: disable atomic save on windows fat file system

Fixes: QTCREATORBUG-29942
Change-Id: I10e0b541a364b7929bc2fa37fdc4f6e504f6b675
Reviewed-by: Eike Ziller <eike.ziller@qt.io>